[dev] replace react-select with a custom one

--- a/src/index.css
+++ b/src/index.css
@@ -24,23 +24,85 @@ body {
   justify-content: space-between;
 }
 
+.align_start {
+  justify-content: start;
+}
+
 .list_item {
   padding: 4px;
   margin: 4px 0;
 }
 
 .selected {
-  background-color: rgb(124, 191, 250);
+  background-color: #b2d9fa;
 }
 
 button {
   cursor: pointer;
 }
 
-.btn__clear {
-  width: 100px;
+.select input {
+  border: 1px solid #ccc;
+  border-radius: 3px;
+  line-height: 22px;
+  padding: 2px 5px;
 }
 
-.select {
-  width: calc(100% - 120px);
+.select input:focus {
+  background-color: transparent;
+  border: 1px solid #9a9a9a;
+  outline: none;
+}
+
+.btn__clear {
+  width: 105px;
+  margin-left: 30px;
+  background-color: #b2d9fa;
+  border-radius: 3px;
+  border: 1px solid #033d70;
+  color: #033d70;
+  line-height: 22px;
+}
+
+.btn__clear:focus {
+  outline: none;
+}
+
+.btn__clear:hover {
+  background-color: #9bcdf7;
+}
+
+.btn .material-icons {
+  margin-top: 5px;
+  cursor: pointer;
+  transition: 3;
+}
+
+.hidden {
+  display: none;
+}
+
+.options_popup {
+  position: relative;
+}
+
+.options_popup ul {
+  padding: 0;
+  margin: 5px 0;
+  border: 1px solid #aeddff;
+  border-radius: 3px;
+  width: calc(100% - 3px);
+}
+
+.options_popup li {
+  list-style: none;
+  display: block;
+  border: 1px solid #aeddff;
+  margin: 5px;
+  padding: 2px 5px;
+  border-radius: 3px;
+}
+
+.popup {
+  position: absolute;
 }
